Reset test container after each test. Destroy container only on JVM shutdown